--- a/dashboard1.html
+++ b/dashboard1.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="assets/css/dashforge.dashboard.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/progress.css">
-    <!-- <link rel="stylesheet" href="assets/css/skin.dark.css"> -->
+    <link rel="stylesheet" href="assets/css/skin.dark.css">
   </head>
   <body>
 
