--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="assets/css/dashforge.dashboard.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/progress.css">
-    <!-- <link rel="stylesheet" href="assets/css/skin.dark.css"> -->
+    <link rel="stylesheet" href="assets/css/skin.dark.css">
   </head>
   <body>
 
@@ -219,9 +219,18 @@
                   </div>
                 </div>
                 <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around mg-b-20">
-                  <div class="p-1 px-3 bg-success rounded-2 tx-uppercase tx-10">Good</div>
-                  <div class="p-1 px-3 bg-warning rounded-2 tx-uppercase tx-10">Average</div>
-                  <div class="p-1 px-3 bg-danger rounded-2 tx-uppercase tx-10">Poor</div>
+                  <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around">
+                    <div class="p-2 px-3 bg-success rounded-2"></div><span class="pl-1 tx-uppercase tx-10">Good</span>
+                  </div>
+
+                  <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around">
+                    <div class="p-2 px-3 bg-warning rounded-2"></div><span class="pl-1 tx-uppercase tx-10">Average</span>
+                  </div>
+
+                  <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around">
+                    <div class="p-2 px-3 bg-danger rounded-2"></div><span class="pl-1 tx-uppercase tx-10">Poor</span>
+                  </div>
+                  
                 </div>
               </div>
             </div>
