--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="assets/css/dashforge.dashboard.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/progress.css">
-    <link rel="stylesheet" href="assets/css/skin.dark.css">
+    <!-- <link rel="stylesheet" href="assets/css/skin.dark.css"> -->
   </head>
   <body>
 
@@ -118,7 +118,7 @@
           </div>
 
           <div class="row row-xs">
-            <div class="col-sm-6 col-xs-6 col-lg-2">
+            <div class="col-sm-6 col-lg-2 mg-t-10 mg-sm-t-0 col-6">
               <div class="card card-body p-3">
                 <h6 class="tx-uppercase tx-10 tx-spacing-1 tx-color-02 tx-semibold mg-b-8 tx-right white">ASSIGNED TO YOU</h6>
                 <div class="d-flex d-lg-block d-xl-flex align-items-end justify-content-between">
@@ -127,7 +127,7 @@
                 </div>
               </div>
             </div><!-- col -->
-            <div class="col-sm-6 col-lg-2 mg-t-10 mg-sm-t-0">
+            <div class="col-sm-6 col-lg-2 mg-t-10 mg-sm-t-0 col-6">
               <div class="card card-body p-3">
               <!-- <div class="card card-body"> Other type of Card Body -->
                 <h6 class="tx-uppercase tx-10 tx-spacing-1 tx-color-02 tx-semibold mg-b-8 tx-right white">INITIATED REQUESTS</h6>
@@ -137,7 +137,7 @@
                 </div>
               </div>
             </div><!-- col -->
-            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0">
+            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0 col-6">
               <div class="card card-body p-3">
                 <h6 class="tx-uppercase tx-10 tx-spacing-1 tx-color-02 tx-semibold mg-b-8 tx-right white">COMPLETED</h6>
                 <div class="d-flex d-lg-block d-xl-flex align-items-end justify-content-between">
@@ -146,7 +146,7 @@
                 </div>
               </div>
             </div><!-- col -->
-            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0">
+            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0 col-6">
               <div class="card card-body p-3">
                 <h6 class="tx-uppercase tx-10 tx-spacing-1 tx-color-02 tx-semibold mg-b-8 tx-right white">REJECTED</h6>
                 <div class="d-flex d-lg-block d-xl-flex align-items-end justify-content-between">
@@ -155,7 +155,7 @@
                 </div>
               </div>
             </div><!-- col -->
-            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0">
+            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0 col-6">
               <div class="card card-body p-3">
                 <h6 class="tx-uppercase tx-10 tx-spacing-1 tx-color-02 tx-semibold mg-b-8 tx-right white">ASSIGNED TO TEAM</h6>
                 <div class="d-flex d-lg-block d-xl-flex align-items-end justify-content-between">
@@ -164,7 +164,7 @@
                 </div>
               </div>
             </div><!-- col -->
-            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0">
+            <div class="col-sm-6 col-lg-2 mg-t-10 mg-lg-t-0 col-6">
               <div class="card card-body p-3">
                 <h6 class="tx-uppercase tx-10 tx-spacing-1 tx-color-02 tx-semibold mg-b-8 tx-right white">TREATED REQUESTS</h6>
                 <div class="d-flex d-lg-block d-xl-flex align-items-end justify-content-between">
