Performance Tab - Layout Fixed

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -199,36 +199,38 @@
               </div><!-- card-header -->
               <div class="card-body pos-relative pd-0">
                 <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-between holder-pie">
-                  <div class="p-1 progress-holder">
-                    <!-- Progress Chart Start -->
-                    <div class="progress-circle over50 p50">
-                      <span>50%</span>
-                      <div class="left-half-clipper">
-                        <div class="first50-bar"></div>
-                        <div class="value-bar"></div>
+                  <div>
+                    <div class="p-1 progress-holder col-12">
+                      <!-- Progress Chart Start -->
+                      <div class="progress-circle over50 p50">
+                        <span>50%</span>
+                        <div class="left-half-clipper">
+                          <div class="first50-bar"></div>
+                          <div class="value-bar"></div>
+                        </div>
                       </div>
+                      <!-- Progress Chart End -->
                     </div>
-                    <!-- Progress Chart End -->
-                  </div>
-                  <div class="p-3 progress-copy white">
-                    <h6 class="font-weight-bold white tx-uppercase">Review</h6>
-                    <span class="tx-11">
-                      Good job this week George, you had a performance increase of but there is room for improvement.
-                      Cheers to a better week.
-                    </span>
+                    <div class="p-3 progress-copy white col-12">
+                      <h6 class="font-weight-bold white tx-uppercase">Review</h6>
+                      <span class="tx-11">
+                        Good job this week George, you had a performance increase of but there is room for improvement.
+                        Cheers to a better week.
+                      </span>
+                    </div>
                   </div>
                 </div>
                 <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around mg-b-20">
                   <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around">
-                    <div class="p-2 px-3 bg-success rounded-2"></div><span class="pl-1 tx-uppercase tx-10">Good</span>
+                    <div class="p-2 px-3 bg-success rounded-2"></div><span class="pl-1 tx-uppercase tx-10 white">Good</span>
                   </div>
 
                   <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around">
-                    <div class="p-2 px-3 bg-warning rounded-2"></div><span class="pl-1 tx-uppercase tx-10">Average</span>
+                    <div class="p-2 px-3 bg-warning rounded-2"></div><span class="pl-1 tx-uppercase tx-10 white">Average</span>
                   </div>
 
                   <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around">
-                    <div class="p-2 px-3 bg-danger rounded-2"></div><span class="pl-1 tx-uppercase tx-10">Poor</span>
+                    <div class="p-2 px-3 bg-danger rounded-2"></div><span class="pl-1 tx-uppercase tx-10 white">Poor</span>
                   </div>
                   
                 </div>
