--- a/dashboard.html
+++ b/dashboard.html
@@ -89,7 +89,7 @@
         </div>
         <nav class="nav">
           <div><img class="uba-logo" alt="UBA Logo Dark" src="assets/img/uba_logo_red.svg"></div>
-          <a href="" class="nav-link pt-2 white" data-toggle="tooltip" title="Sign out"><i data-feather="log-out"></i></a>
+          <a href="" class="nav-link pt-2 white sign-out" data-toggle="tooltip" title="Sign out"><i data-feather="log-out"></i></a>
         </nav>
       </div><!-- content-header -->
 
@@ -104,7 +104,7 @@
               </nav>
               <h4 class="mg-b-0 tx-spacing--1 white">Welcome to Dashboard</h4>
             </div>
-            <div class="" style="text-align: center;margin-top:5%">
+            <div class="d-none d-md-block d-lg-none" style="text-align: center;margin-top:5%">
               <button class="icon-btn add-btn">
                 <div class="add-icon"></div>
                 <div class="btn-txt">Add</div>
@@ -199,8 +199,8 @@
               </div><!-- card-header -->
               <div class="card-body pos-relative pd-0">
                 <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-between holder-pie">
-                  <div>
-                    <div class="p-1 progress-holder col-12">
+
+                    <div class="p-1 progress-holder col-6">
                       <!-- Progress Chart Start -->
                       <div class="progress-circle over50 p50">
                         <span>50%</span>
@@ -211,14 +211,14 @@
                       </div>
                       <!-- Progress Chart End -->
                     </div>
-                    <div class="p-3 progress-copy white col-12">
+                    <div class="p-3 progress-copy white col-6">
                       <h6 class="font-weight-bold white tx-uppercase">Review</h6>
                       <span class="tx-11">
                         Good job this week George, you had a performance increase of but there is room for improvement.
                         Cheers to a better week.
                       </span>
                     </div>
-                  </div>
+
                 </div>
                 <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around mg-b-20">
                   <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-around">
