--- a/dashboard.html
+++ b/dashboard.html
@@ -199,8 +199,8 @@
               <div class="card-header pd-y-20 d-md-flex align-items-center justify-content-between">
                 <h6 class="mg-b-0 tx-uppercase tx-15 tx-semibold white">Responsiveness Meter</h6>
               </div><!-- card-header -->
-              <div class="card-body pos-relative pd-0">
-                <div class="d-flex d-lg-block d-xl-flex align-items-center justify-content-between holder-pie">
+              <div class="card-body pos-relative pd-0 pie-container">
+                <div class="d-flex d-lg-block d-xl-flex justify-content-between holder-pie">
 
                     <div class="p-1 progress-holder col-6">
                       <!-- Progress Chart Start -->
