--- a/dashboard.html
+++ b/dashboard.html
@@ -67,7 +67,7 @@
             <a href="" class="nav-link"><i data-feather="clipboard"></i> <span>Requests</span></a>
             <ul>  
              
-              <li><span></span><a href="page-profile-view.html">New Request</a></li>
+              <li><span></span><a href="dashboard.html">New Request</a></li>
               <li><a href="page-connections.html">My Form Request</a></li>
               <li><a href="page-groups.html">Process Approval Request</a></li>
 
@@ -79,6 +79,14 @@
           </li>
           
         </ul>
+
+        <!-- Switch Button-->
+        <div class="switch-btn">
+          <label id="switch" class="switch">
+            <input type="checkbox" onchange="toggleTheme()" id="slider">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
     </aside>
 
@@ -344,6 +352,196 @@
                                   data-feather="eye"></i></button>
                               <button type="button" class="btn btn-outline-secondary mr-2"><i
                                   data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i
+                                  data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i
+                                  data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i
+                                  data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>3RD PARTY REMOTE ACCESS ENROLLMENT FORM</td>
+                            <td>meyou.everybody@ubagroup.com</td>
+                            <td><span>20 Jan 2020</span> | <span>11:45:09</span></td>
+                            <td><span>17:45:09</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="refresh-cw"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="eye"></i></button>
+                              <button type="button" class="btn btn-outline-secondary mr-2"><i data-feather="clock"></i></button>
                             </td>
                           </tr>
 
@@ -936,6 +1134,37 @@
       });
 
       bar.animate(0.77); // Number from 0.0 to 1.0
+    </script>
+
+    <script>
+      // function to set a given theme/color-scheme
+      function setTheme(themeName) {
+        localStorage.setItem('theme', themeName);
+        document.documentElement.className = themeName;
+      }
+
+      // function to toggle between light and dark theme
+      function toggleTheme() {
+        if (localStorage.getItem('theme') === 'theme-dark') {
+          setTheme('theme-light');
+        } else {
+          setTheme('theme-dark');
+        }
+      }
+
+      // Immediately invoked function to set the theme on initial load
+      (function () {
+        if (localStorage.getItem('theme') === 'theme-dark') {
+          setTheme('theme-dark');
+          document.getElementById('slider').checked = false;
+        } else {
+          setTheme('theme-light');
+          document.getElementById('slider').checked = true;
+        }
+      })();
+
+
+      // button
     </script>
   </body>
 </html>
